# soff-compiler

./: LICENSE  README.md  install.sh
compiler/tools/clang/include/clang/SnuAST/: CFGAnalysis.h  WAST.h  WCFG.h
compiler/tools/clang/include/clang/SnuAnalysis/: Dominator.h  Invariance.h  LiveVariables.h  Loop.h  MemoryAccess.h  (+1 more)
compiler/tools/clang/lib/: CMakeLists.txt  Makefile
compiler/tools/clang/lib/SnuAST/: CFGAnalysis.cpp  CMakeLists.txt  Makefile  WAST.cpp  WASTPrinter.cpp  WCFG.cpp
compiler/tools/clang/lib/SnuAnalysis/: CMakeLists.txt  Dominator.cpp  Invariance.cpp  LiveVariables.cpp  Loop.cpp  Makefile  MemoryAccess.cpp  PointerAnalysis.cpp
compiler/tools/clang/lib/SnuFrontend/: CMakeLists.txt  FrontendActions.cpp  Makefile  Options.cpp
compiler/tools/clang/lib/SnuOptimization/: CMakeLists.txt  Makefile  PointerRemoval.cpp
compiler/tools/clang/lib/SnuPreprocess/: ASTBuilder.cpp  ASTDuplicator.cpp  CMakeLists.txt  FunctionNormalizer.cpp  Makefile
compiler/tools/clang/lib/SnuSynthesis/: CGBasicBlock.cpp  CGBasicBlock.h  CGCommon.cpp  CGCommon.h  CGControlFlowUnit.cpp  CGControlFlowUnit.h  CGLockSubsystem.cpp  CGLockSubsystem.h  CGMemorySubsystem.cpp  CGMemorySubsystem.h  CMakeLists.txt  CodeGenerator.cpp  ControlFlowConstraint.cpp  DataflowGraph.cpp  DataflowGraphPrinter.cpp  Makefile  PlatformContext.cpp  Scheduler.cpp  StructuralAnalysis.cpp  Verilog.cpp  VerilogPrinter.cpp  VirtualVariables.cpp
compiler/tools/clang/tools/driver/: CMakeLists.txt  Makefile  driver.cpp  snuclcc_main.cpp
etc/: __all__.json
include/: cuda.h  opencl_spir.h
(+16 files in other folders)
